--- a/package.json
+++ b/package.json
@@ -199,7 +199,7 @@
         "autotex.automaticDraftDetection": {
           "type": "boolean",
           "default": false,
-          "description": "Enable automatic draft detection based on text analysis"
+          "description": "Enable automatic draft detection based on text analysis (Still in development - may have bugs)"
         },
         "autotex.manualDraftBlocks": {
           "type": "boolean",
